Fixed some layout issues

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -101,14 +101,25 @@ div.social-media{
 
 
 /*SECTION 2 STYLING  */
+.topBar {
+  padding-left: 0px;
+  padding-right: 0px;
+}
 
 div.nav-bar {
   margin-top: 30px;
   margin-left: 0px;
+  @media (max-width: 992px){
+    font-size: 10px;
+    margin-left: 25px;
+  }
+  @media (max-width: 600px){
+    margin-right: 20px;
+  }
   ul{
     padding: 0;
   }
-   a{
+  a{
     font-size: 13px;
     padding: 10px;
     color: $white;
@@ -144,8 +155,8 @@ div.section-3 {
   height: 30vw;
   padding: 0px;
   @include shadow();
-  @media (max-width: 1200px){
-    margin-top: 20px;
+  @media (max-width: 1000px){
+    margin-top: 15px;
   }
   .S3{
   padding: 0;
@@ -175,7 +186,7 @@ div.section-3 {
 .carousel {
   margin-top: 75px;
   @media (max-width: 700px){
-    margin-top: 50px;
+    margin-top: 40px;
   }
 }
 
@@ -184,9 +195,13 @@ div.section-4 {
   margin-top: 20px;
   text-align: center;
     .post {
+      @media (max-width: 980px){
+        margin-top: 10px;
+      }
       background: $white;
       padding: 10px 20px 20px 20px;
       text-align: center;
+      min-height: 380px;
       @include shadow();
     }
     h2 {
@@ -215,6 +230,9 @@ div.section-4 {
     font-size: 15px;
     font-weight: bold;
     transition: font-size 0.2s ease;
+  }
+  #lastH4{
+    margin-top:42px;
   }
 
 
@@ -323,20 +341,19 @@ div.section-6 {
   background: #FFF;
   padding: 12px;
   margin-top: 30px;
+  padding-left: 58px;
   @include shadow();
   @media (max-width: 900px){
     margin-top: 20px;
   }
-    a {
-      margin-right:45px;
-      background: #FFF;
-      }
     img {
+      margin-right: 40px;
       @media (max-width: 900px){
         transform: rotate(-90deg);
         display: block;
-        margin-left: 45%;
-        width: 15%
+        margin-left: 40%;
+        height: 400px;
+        margin-top: -160px;
       }
     }
   };
